# stella

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: pull_request_template.md
engine/: CMakeLists.txt
engine/include/: Engine.hpp
engine/include/components/: CCamera.hpp  CController.h  CController.hpp  CDebug.hpp  CInput.h  CInput.hpp  CPosition.h  CPosition.hpp  CRender.h  CRender.hpp  CRigidBody.h  CRigidBody.hpp  Components.hpp
engine/include/ecs/: Entity.hpp  EntityManager.hpp  Scene.h  Scene.hpp
engine/include/systems/: CameraSystem.hpp  DebugSystem.hpp  InputSystem.h  InputSystem.hpp  MovementSystem.h  MovementSystem.hpp  PhysicsSystem.h  PhysicsSystem.hpp  RenderSystem.h  RenderSystem.hpp  Systems.hpp
engine/src/: Engine.cpp
engine/src/ecs/: Entity.cpp  EntityManager.cpp  Scene.cpp
engine/src/systems/: CameraSystem.cpp  DebugSystem.cpp  InputSystem.cpp  MovementSystem.cpp  PhysicsSystem.cpp  RenderSystem.cpp  Systems.cpp
game/: CMakeLists.txt  Main.cpp  main.cpp
